--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
   display: block;
 }
 
-.txtagenda{
+.txtagenda, label{
   font-size: 1.5rem;
   color: white;
   margin-left: 1%;
@@ -108,4 +108,3 @@ footer{
   color: white;
   text-align: center;
 }
-
