--- a/style.css
+++ b/style.css
@@ -18,9 +18,14 @@ h1{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-#agendamento{
+#centro{
   background-color: rgba(0, 0, 0, 0.295);
   background-position: 70% 40%;
+  width: 100%;
+}
+
+#agendamento{
+  background-color: rgba(0, 0, 0, 0.295);
   width: 100%;
   display: block;
 }
@@ -45,6 +50,7 @@ h1{
   font-size: 1rem;
   padding: 1% 2% 1% 2%;
   background: transparent;
+  color: black;
 }
 
 #horainicio, #horafinal{
@@ -55,6 +61,7 @@ h1{
   background:transparent;
   margin-bottom: 2.5%;
   margin-left: 1%;
+  color: black;
 }
 
 #data{
@@ -65,6 +72,7 @@ h1{
   font-size: 1rem;
   padding: 1% 2% 1% 2%;
   background: transparent;
+  color: black;
 }
 
 #um, #mais{
@@ -86,6 +94,7 @@ textarea{
   padding: 1% 2% 1% 2%;
   background: transparent;
   margin-left: 1%;
+  color: black;
 }
 
 .btenviar{
@@ -96,6 +105,7 @@ textarea{
   transition: 1s;
   margin-left: 1%;
   margin-bottom: 2%;
+  margin-top: 1%;
 }
 
 .btenviar:hover{
