--- a/style.css
+++ b/style.css
@@ -51,17 +51,19 @@ h1{
   padding: 1% 2% 1% 2%;
   background: transparent;
   color: black;
+  border-color: black;
 }
 
 #horainicio, #horafinal{
   width: 50%;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding: 1% 2% 1% 2%;
   border-radius: 25px;
   background:transparent;
   margin-bottom: 2.5%;
   margin-left: 1%;
   color: black;
+  border-color: black;
 }
 
 #data{
@@ -69,10 +71,11 @@ h1{
   margin-bottom: 2.5%;
   margin-left: 1%;
   border-radius: 20px;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding: 1% 2% 1% 2%;
   background: transparent;
   color: black;
+  border-color: black;
 }
 
 #um, #mais{
